--- a/style.css
+++ b/style.css
@@ -30,3 +30,11 @@ section label {
 section h3 {
   margin: 0.5em;
 }
+section.panel {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    max-width: 700px;
+    padding: 1em;
+    background-color: gray;
+}
