--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ div {
   align-items: center;
   background-color: gray;
 }
+svg{
+    cursor: crosshair;
+}
 section {
   display: flex;
   justify-content: center;
