--- a/style.css
+++ b/style.css
@@ -38,12 +38,12 @@ section {
   background-color: #222;
   border-radius: 0.5em;
   margin: 0;
+  padding: 0.25em;
 }
 section label {
   background: #333;
-  padding: 0.25em;
-  margin: 0.25em;
   border-radius: 0.5em;
+  padding: 0.5em;
 }
 section h3 {
   margin: 0.5em;
@@ -51,6 +51,7 @@ section h3 {
 section.panel {
   display: flex;
   justify-content: space-evenly;
+  flex-wrap: wrap;
   width: 100%;
   max-width: 700px;
   background-color: gray;
